typescript/checker/tests/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName4.ts.stderr
error: A 'get' accessor must return a value
 --> $DIR/tests/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName4.ts:2:15
  |
2 | var v = { get [e]() { } };
  |               ^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            30,
        ),
        hi: BytePos(
            31,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName4.ts:2:16
  |
2 | var v = { get [e]() { } };
  |                ^

